--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,7 +15,7 @@ html, body{
 body{
     background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
-    background-attachment: fixed
+    background-attachment: fixed;
 
 }
 
@@ -34,5 +34,13 @@ section#telefone{
     width: 311px;
     background-color: rgb(44, 66, 66);
     background: url(../imagens/frame-iphone.png) no-repeat;
-    
+}
+
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 21px;
+    border-radius: 5px;
+    width: 269px;
+    height: 471px;
 }
