--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,3 +44,26 @@ iframe#tela{
     width: 269px;
     height: 471px;
 }
+
+section#redes-sociais{
+    text-align: right;
+    margin-right: 15px;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px  rgba(0, 0, 0, 0.438);
+    box-sizing: border-box;
+    opacity: 0.6;
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.678);
+    transition: all 0.6s ease-in-out;
+    transform: translate(-20px);
+    box-shadow: 9px 0px 10px rgba(255, 255, 255, 0.39);
+    opacity: 1;
+    width: 65px;
+}
